# receipt-gpt

./: .env.example  .env_example  .gitignore  README.md  ingredients.csv  pyproject.toml  recipe_output.json  recipe_output.txt  try_my_luck_output.txt
.devcontainer/: Dockerfile  devcontainer.json
application/: app.py  gpt.py  test.ipynb
application/static/: style.css
application/templates/: index.html
